Tuan3 - ReactNative - Lab1 - Screen 1_b + 1_c + 1_e + 1_d + xmeye

--- a/RN/Tuan3/Lab1/1_d/app.json
+++ b/RN/Tuan3/Lab1/1_d/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Screen1_b",
-    "slug": "Screen1_b",
+    "name": "1_d",
+    "slug": "snack-92a6e1cc-49b5-49e6-9c87-bbad9af6b8af",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
