--- a/RN/Tuan3/Lab1/1_e/package.json
+++ b/RN/Tuan3/Lab1/1_e/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "screen1_b",
-  "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,16 +7,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
     "expo": "~51.0.28",
-    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-paper": "4.9.2",
+    "@expo/vector-icons": "^14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
